use real API for diagram, expose hooks for mousedown and tooltip

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -27,7 +27,7 @@
         <h3>Showtime</h3>
         <table align="center" class="inner">
           <tr>
-            <td>left</td>
+            <td id="rfc">left</td>
             <td id="diagram">This should be a diagram! If you don't see it you need Javascript enabled</td>
             <td>right</td>
           </tr>
