--- a/data/web/index.html
+++ b/data/web/index.html
@@ -48,6 +48,7 @@
       </div>
     </footer>
 
+    <script src="jquery-1.11.1.min.js"></script>
     <script src="underscore-min.js"></script>
     <script src="raphael-min.js"></script>
     <script src="sequence-diagram-min.js"></script>
