fix typo; also slow

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -572,8 +572,8 @@
               case dh_anon:
                   ClientDiffieHellmanPublic;
           } exchange_keys;
-      } ClientKeyExchange;</para>
-          <para class="rfc-chapter chapter-7-4-9">7.4.9.  Finished
+      } ClientKeyExchange;</pre></para>
+          <para class="rfc-chapter chapter-7-4-9"><pre>7.4.9.  Finished
 
    When this message will be sent:
 
