--- a/data/web/index.html
+++ b/data/web/index.html
@@ -21,6 +21,7 @@
       <section id="info">
         <h3>Information</h3>
         <p>The data shown here is from your current handshake with our server (which uses the <a href="https://github.com/mirleft/ocaml-tls">OCaml-TLS</a> stack). We visualise the recorded TLS fragments on the wire between your browser and our server, as well as some internal state of our server. There is no recording of IP addresses whatsoever, only data on top of the TLS fragments. We keep this data for research purposes.</p>
+        <p>The messages with dotted lines is unencrypted data, solid lines represent encrypted data.</p>
       </section>
 
       <section id="demo">
