reorder, get communication in place

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -691,11 +691,8 @@
    layer.</pre></para>
         </div>
         <div id="diagram">This should be a diagram! If you don't see it you need Javascript enabled</div>
-        <div id="details">
-          <input type="button" value="renegotiate" id="request"></input>
-          <input type="button" value="update" id="update"></input>
-          <para class="data-NONE"><pre>Intentionally left blank!</pre></para>
-        </div>
+        <div id="details"><pre id="details-pre">Intentionally left blank!</pre></div>
+        <input type="button" value="renegotiate" id="request"></input>
       </section>
     </div>
 
