load js libs from cdn

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -706,9 +706,12 @@
         This demo runs on <a href="https://github.com/mirage/ocaml-cohttp">cohttp</a>, which runs on <a href="http://www.openmirage.org">mirage</a>. Please report any issues to <a href="https://github.com/mirleft/ocaml-tls/issues">GitHub issue tracker</a>.
         We use <a href="http://jquery.com">jquery</a> and <a href="https://github.com/bramp/js-sequence-diagrams">js-sequence-diagrams</a>, which depends on <a href="http://raphaeljs.com/">Raphaël</a> and <a href="http://underscorejs.org/">Underscore.js</a>.
     </footer>
-    <script src="jquery-1.11.1.min.js"></script>
-    <script src="underscore-min.js"></script>
-    <script src="raphael-min.js"></script>
+    <!-- <script src="jquery-1.11.1.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!-- <script src="underscore-min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+    <!-- <script src="raphael-min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js"></script>
     <script src="sequence-diagram-min.js"></script>
     <script src="gui.js"></script>
     <script>window.onload = initialise</script>
