--- a/data/web/index.html
+++ b/data/web/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div class="center">
-        <h1>OCaml-TLS demo Server</h1>
+        <h1>OCaml-TLS demo server</h1>
       </div>
     </header>
 
@@ -20,11 +20,9 @@
 
       <section id="info">
         <h3>About this site</h3>
-        <p>When connecting to a secure site, your browser automatically initiates a handshake with the server. The sequence diagram below shows you the <a href="https://en.wikipedia.org/wiki/Transport_Layer_Security#TLS_handshake">TLS handshake</a> that took place when your browser connected to this web server. We demonstrate it using tracing of our <a href="https://github.com/mirleft/ocaml-tls">OCaml-TLS</a> implementation. We chose the protocol version and ciphersuite at random for this demonstration server, we do not use the best one available.</p>
-        <p>The dotted lines represent messages which are unencrypted, while solid lines are encrypted messages. On the left you can see excerpts of the RFC 5246 describing the message you clicked on. On the right you can see further details about the message. Subsequent messages of the same type are condensed into a single one and marked with a trailing '*'.</p>
-        <p>The 'renegotiate' button below lets our server send a Hello Request message to the client, and after 500 milliseconds the JavaScript fetches a new trace. With some luck both requests use the same connection, and you will see another handshake in the sequence diagram.</p>
-        <p>For research purposes we retain the traces. These are solely on the TLS layer and no IP addresses nor port numbers are captured whatsoever. You can also view the <a href="https://github.com/mirleft/tls-demo-server">source code of this server</a>.</p>
-        <p>Please report any issues to <a href="https://github.com/mirleft/ocaml-tls/issues">GitHub issue tracker</a>.
+        <p>When connecting to a secure site (http<b>s</b>://), your browser automatically initiates a secure connection (using <a href="https://en.wikipedia.org/wiki/Transport_Layer_Security">transport layer security (TLS)</a>). The sequence diagram below shows you the <a href="https://en.wikipedia.org/wiki/Transport_Layer_Security#TLS_handshake">TLS handshake</a> that took place when your browser connected to this web server. We traced it using our <a href="https://github.com/mirleft/ocaml-tls">OCaml-TLS</a> implementation.</p>
+        <p>The dotted lines represent unencrypted messages, while the solid lines indicate encrypted messages. On the left the <a href="https://tools.ietf.org/html/rfc5246">RFC 5246 (TLS-1.2)</a> specification of the selected message type is presented. On the right further details about the exchanged message are shown. Subsequent messages of the same type are condensed (marked with '*').</p>
+        <p>The 'renegotiate' button below lets our server send a <i>Hello Request</i> message to the client, and after 500 milliseconds the JavaScript fetches a new trace and updates the sequence diagram. With some luck both requests used the same connection. Our demo server picked protocol version and ciphersuite at random.</p>
         <input type="button" value="" id="request" disabled="true"></input>
       </section>
 
@@ -703,7 +701,8 @@
     </div>
 
     <footer class="site-footer">
-        This demo runs on <a href="https://github.com/mirage/ocaml-cohttp">cohttp</a>, which runs on <a href="http://www.openmirage.org">mirage</a>. Please report any issues to <a href="https://github.com/mirleft/ocaml-tls/issues">GitHub issue tracker</a>.
+      For research purposes we retain traces These are solely on the TLS layer and no IP addresses nor port numbers are captured whatsoever.
+        This <a href="https://github.com/mirleft/tls-demo-server">demo</a> runs on <a href="https://github.com/mirage/ocaml-cohttp">cohttp</a>, which runs on <a href="http://www.openmirage.org">mirage</a>. Please report any issues to <a href="https://github.com/mirleft/ocaml-tls/issues">GitHub issue tracker</a>.
         We use <a href="http://jquery.com">jquery</a> and <a href="https://github.com/bramp/js-sequence-diagrams">js-sequence-diagrams</a>, which depends on <a href="http://raphaeljs.com/">Raphaël</a> and <a href="http://underscorejs.org/">Underscore.js</a>.
     </footer>
     <!-- <script src="jquery-1.11.1.min.js"></script> -->
