send trace data on /rekey directly

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -48,10 +48,9 @@
     <p>
       <input type="button" value="waiting for JS" id="request"
            disabled="true"></input> lets our server send a <em>Hello
-        Request</em> message to the client, and after 500 milliseconds the
+        Request</em> message to the client, and
       JavaScript fetches a new trace and updates the sequence
-      diagram. With some luck both requests used the same
-      connection. Our demo server picked a protocol version and
+      diagram. Our demo server picked a protocol version and
       ciphersuite at random.
     </p>
   </section>
