--- a/data/web/index.html
+++ b/data/web/index.html
@@ -32,7 +32,7 @@
       The sequence diagram below shows you the
       <a href="https://en.wikipedia.org/wiki/Transport_Layer_Security#TLS_handshake">
         TLS handshake
-      </a> that took place when your browser connected to this web
+      </a> that <em>just</em> took place when your browser connected to this web
       server. We traced it using
       our <a href="https://github.com/mirleft/ocaml-tls">OCaml-TLS</a>
       implementation.
