revise towards MirageOS3 and being deployed as unikernel

--- a/data/web/index.html
+++ b/data/web/index.html
@@ -6,15 +6,9 @@
   <title>OCaml-TLS demo server</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-  <!-- <script src="jquery-1.11.1.min.js"></script> -->
-  <script type="text/javascript"
-          src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-  <!-- <script src="underscore-min.js"></script> -->
-  <script type="text/javascript"
-          src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-  <!-- <script src="raphael-min.js"></script> -->
-  <script type="text/javascript"
-          src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js"></script>
+  <script src="jquery-1.11.1.min.js"></script>
+  <script src="underscore-min.js"></script>
+  <script src="raphael-min.js"></script>
   <script type="text/javascript" src="sequence-diagram-min.js"></script>
   <script type="text/javascript" src="gui.js"></script>
   <script type="text/javascript">window.onload = initialise</script>
